--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -79,6 +79,6 @@
     text-align: center;
     color: #6c757d;
     font-size: 12px;
-    margin-bottom: 0;
+    margin-bottom: 1px;
   }
 }
