--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -18,7 +18,7 @@
     display: flex;
     align-items: center;
     max-width: 1100px;
-    max-height: 47px;
+    height: 47px;
     margin: 0 auto;
 
     .left {
@@ -30,6 +30,7 @@
         display: flex;
         align-items: center;
         cursor: pointer;
+        transform: translateY(10%);
       }
     }
 
@@ -44,12 +45,12 @@
         list-style: none;
         display: flex;
         align-items: center;
+        transform: translateX(-7%);
 
         li {
           color: #fff;
           padding: 10px 15px;
           font-size: 14px;
-          font-weight: 100;
           background-color: #272727;
           cursor: pointer;
           transition: all 0.25s ease;
@@ -68,15 +69,16 @@
         outline: none;
         font-size: 14px;
         font-weight: 100;
-        transition: all 0.15s ease-in-out;
+        transition: all 0.1s ease;
 
         &.active {
+          height: 35px;
           width: 400px;
           outline-style: solid;
           border: none;
           outline-width: 2px;
           outline-color: #bc0150;
-          transition: all 0.15s ease-in-out;
+          transition: all 0.1s ease;
         }
 
         &::placeholder {
